Opened 14 years ago
Closed 14 years ago
#6965 closed bug (fixed)
Output not rotated printing in landscape
Reported by: | laplace | Owned by: | laplace |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Printing | Version: | R1/Development |
Keywords: | Gutenprint | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Change History (4)
comment:1 by , 14 years ago
comment:2 by , 14 years ago
Status: | new → in-progress |
---|
comment:3 by , 14 years ago
Implemented in hrev39800.
Enabled in all libprint based printer drivers. Only tested with Gutenprint printer add-on. Canon LIPS3, LIPS4, HP PCL5, PCL6 and PostScript still need to be tested.
comment:4 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Note:
See TracTickets
for help on using tickets.
This is probably an old forgotten bug / missing feature in the printer driver framework (libprint). I am going to fix it soon.